--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="cat-btn" onclick="selectCategory('sejarah')">📜 Sejarah</button>
             <button class="cat-btn" onclick="selectCategory('fikih')">⚖️ Fikih</button>
             <button class="cat-btn" onclick="selectCategory('juzamma')">📖 Juz Amma</button>
-            <button class="cat-btn image-mode" onclick="selectCategory('gambar')">🖼️ Gambar</button>
+            <button class="cat-btn image-mode" onclick="selectCategory('sambungayat')">🎤 Sambung Ayat</button>
         </div>
     </div>
 
@@ -25,18 +25,12 @@
         <div class="card-box">
             <p><strong>Pilih Tingkat Kesulitan:</strong></p>
             <div class="level-box">
-                <label class="level-label">
-                    <input type="radio" name="level" value="anak" checked> 🧒 Anak
-                </label>
-                <label class="level-label">
-                    <input type="radio" name="level" value="dewasa"> 🧔 Dewasa
-                </label>
+                <label class="level-label"><input type="radio" name="level" value="anak" checked> 🧒 Anak</label>
+                <label class="level-label"><input type="radio" name="level" value="dewasa"> 🧔 Dewasa</label>
             </div>
-            
             <p><strong>Jumlah Soal:</strong></p>
             <input type="number" id="limit-input" value="10" min="1" max="20" class="input-number">
         </div>
-        
         <button class="start-btn" onclick="startGame()">Mulai Bermain</button>
         <button class="back-link" onclick="location.reload()">Kembali ke Menu</button>
     </div>
@@ -46,10 +40,8 @@
             <span>Soal: <span id="current-num">1</span>/<span id="total-num">10</span></span>
             <span>Skor: <span id="score-val">0</span></span>
         </div>
-        <div id="image-container" class="hidden">
-            <img id="q-img" src="" class="quiz-img">
-        </div>
-        <h3 id="q-text">Pertanyaan akan muncul di sini?</h3>
+        <h3 id="q-text" style="font-size: 1.5rem; line-height: 2.5rem; direction: rtl; font-family: 'Amiri', serif;">Pertanyaan...</h3>
+        <p id="instruction" style="color: #666; font-style: italic; margin-bottom: 20px;">Lanjutkan potongan ayat di atas:</p>
         <div id="options-box"></div>
         <div id="result-msg"></div>
     </div>
